--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "chat.agent.maxRequests": 1000,
     "chatgpt.openOnStartup": true,
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "github.copilot.enable": {
+        "plaintext": true,
+        "markdown": true,
+        "scminput": true
+    }
 }
