Add support for merging external effects patches
Introduces effects_patch.generated.json and logic in app.js to merge external effect definitions at runtime, enabling dynamic extension of item and weapon effects. Updates heic_sim.js to support new effect actions, aliases, and triggers, and adds several utility scripts for patch generation and testing. Also adds a build:effects npm script for generating the patch file.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "unmatched": "node scripts/unmatched.mjs",
     "fetch:missing": "node scripts/fetch_missing_from_wiki.mjs",
     "test": "node -e \"const sim=require('./heic_sim.js'); sim.simulate({hp:10,atk:0},{hp:10,atk:0});\"",
-    "audit:wiki": "node scripts/audit_wiki.mjs --apply"
+    "audit:wiki": "node scripts/audit_wiki.mjs --apply",
+    "build:effects": "node scripts/generate_effects_patch.js"
   },
   "devDependencies": {
     "cheerio": "^1.1.2",
