--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "predev": "npm run gen:details",
     "prebuild": "npm run gen:details:min",
     "build": "node scripts/merge_stats_overrides.js",
+    "build:css": "npx tailwindcss styles.css --output dist/styles.css",
     "coverage": "node scripts/coverage.mjs",
     "unmatched": "node scripts/unmatched.mjs",
     "fetch:missing": "node scripts/fetch_missing_from_wiki.mjs",
